Replace spotbugs by errorprone